# wedding-yew

./: .gitignore  Cargo.toml  README.md  bun.lockb  index.css  index.html  local-env.fish  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build-dev.yml  build-prod.yml  build.yml
src/: components.rs  config.rs  lib.rs  main.rs  pages.rs
src/components/: fade_in_word_container.rs  fetch_api.rs  invitation.rs  live_stream.rs  navigation.rs  scroll_opacity.rs  scroll_y.rs  wedding_day.rs  window.rs
src/pages/: faq.rs  landing.rs  livestream.rs  route.rs  rsvp.rs  rsvp_result.rs  schedule.rs  story.rs  utils.rs
src/pages/landing/: controller.rs  copy.rs  splash.rs  state.rs  title.rs
src/pages/rsvp/: controller.rs  form.rs  state.rs
src/pages/rsvp_result/: controller.rs  copy.rs  state.rs
src/pages/utils/: auth_utils.rs  error_display.rs  trait_utils.rs
