[package]
name = "wedding-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"yew-router" = "0.17.0"
"yew" = { version = "0.20.0", features = ["csr"] }
"gloo" = "0.8.0"
"gloo-utils" = "0.1.5"
"gloo-events" = "0.1.2"
chrono = { version = "0.4.23", features = ["wasmbind"] }
tracing = "0.1.37"
tracing-wasm = "0.2.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
async-trait = "0.1.58"
thiserror = "1.0.37"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.60"
features = [
  "HtmlElement", 
  "Node",   
  "Element", 
  "CssStyleDeclaration", 
  "DomRect",
  "HtmlVideoElement",
  "HtmlTextAreaElement",
  "HtmlMediaElement",
  "Event"
] 

[dev-dependencies]
mockall = "0.11.2"
